--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -162,36 +162,40 @@
 \newpage
 \tableofcontents
 
-\newpage
-\input{ src/Chapter1.tex }
+% Introduction and generalities about Mastodon.
+% \newpage
+% \input{ src/Chapter1.tex }
 
 \newpage
 \part{Tutorials.}
 
 % Automated tracking.
 \newpage
-% \input{ src/Chapter2.tex }
+\input{ src/Chapter2.tex }
 
-% Manual tracking.
+% Manual tracking. TrackScheme.
 \newpage
-% \input{ src/Chapter3.tex }
+\input{ src/Chapter3.tex }
 
 % Orienting in Mastodon.
 \newpage
-% \input{ src/Chapter4.tex }
+\input{ src/Chapter4.tex }
 
+% Feature, tags and tables.
 \newpage
 \input{ src/Chapter5.tex }
 
-\newpage
-\input{ src/Chapter6.tex }
+% \newpage
+% \input{ src/Chapter6.tex }
 
 
-\newpage
-\part{Technical information.}
+% \newpage
+% \part{Technical information.}
+
 
 \newpage
 \bibliographystyle{plainnat}
+\clearpage 
 \bibliography{References}
 
 
